# pip-search

./: README.md  pip-search.py  pyproject.toml
pip_search/: __init__.py
pip_search/package/: __init__.py  __test__.py
pip_search/query/: __init__.py
